--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -70,7 +70,7 @@
           <div class="right col-xs-5">
             {% if logged %}
             <div class="sign" id="my_profile">
-              <a class="present j-login-present" href="/catalog/account/login" style="text-transform: none;"> <span class="j-login-username">wangjunchao</span><b></b> </a>
+              <a class="present j-login-present" href="index.php?route=account/account" style="text-transform: none;"> <span class="j-login-username">wangjunchao</span><b></b> </a>
               <div class="dropdown user-profile-hidd j-user-profile" style="display: none;">
                 <a href="{{ account }}">{{ text_account }}</a>
                 <a href="{{ order }}">{{ text_order }}</a>
