--- a/catalog/view/theme/default/template/account/account.twig
+++ b/catalog/view/theme/default/template/account/account.twig
@@ -8,7 +8,7 @@
             <div class=" col-xs-6 peracc-left">
               <div class="con-left">
                 <div class="con-left-h">
-                  <h4>Hello, <span>16958398</span></h4>
+                  <h4>Hello, <span>{{ user.fullname }}</span></h4>
                 </div>
                 <div class="con-left-p">
                   <p style="margin: 0px;">
