--- a/catalog/view/theme/default/template/product/review.twig
+++ b/catalog/view/theme/default/template/product/review.twig
@@ -1,25 +1,165 @@
-{% if reviews %}
-{% for review in reviews %}
-<table class="table table-striped table-bordered">
-  <tr>
-    <td style="width: 50%;"><strong>{{ review.author }}</strong></td>
-    <td class="text-right">{{ review.date_added }}</td>
-  </tr>
-  <tr>
-    <td colspan="2"><p>{{ review.text }}</p>
-      <div class="stars-box">
-        <div class="rating">
-          {% for i in 1..5 %}
-          <span class="fa fa-stack"><i class="fa fa-star fa-stack-1x {{ review.rating < i ? 'off' }}"></i></span>
-          {% endfor %}
+<div class="product-review">
+  <br class="clear" />
+<div class="custom-reviews j-review-custom" style="position: relative;">
+  <div id="to_review">
+  </div>
+  <h3> Customer Reviews ( <span> {{ reviewsTotol }} </span> ) </h3>
+  <div class="summary dts-summary">
+    <div class="rating" style="margin-left: 11.5%;">
+      <div class="rating-ctn">
+        <span class="key"> Average Rating </span>
+        <div class="star">
+            {% for i in 1..5 %}
+              <span class="fa fa-stack"><i class="fa fa-star fa-stack-1x {{ ratingTotol < i ? 'off' }}"></i></span>
+            {% endfor %}
         </div>
       </div>
-    </td>
-  </tr>
-</table>
-{% endfor %}
-<div class="text-right">{{ pagination }}</div>
-{% else %}
-<p>{{ text_no_reviews }}</p>
-{% endif %}
+    </div>
+    <div class="fit-well">
+      <span class="fit-well-title"> Did the item fit well? </span>
+      <div class="filter-wrap">
+        <ul class="filter-list">
+          <li class="filter-item">
+            <div class="filter-title-box">
+              <span class="key-title"> Small </span>
+            </div>
+            <div class="fit-well-bar">
+              <div class="item_fit_precent" style="display: none;">
+                0%
+              </div>
+              <div class="bar">
+                <span class="bar-unfill"> <span class="bar-fill small-bar" style=""> </span> </span>
+              </div>
+            </div> </li>
+          <li class="filter-item">
+            <div class="filter-title-box">
+              <span class="key-title"> True to Size </span>
+            </div>
+            <div class="fit-well-bar">
+              <div class="item_fit_precent" style="display: none;">
+                100%
+              </div>
+              <div class="bar">
+                <span class="bar-unfill"> <span class="bar-fill true-bar" style=""> </span> </span>
+              </div>
+            </div> </li>
+          <li class="filter-item">
+            <div class="filter-title-box">
+              <span class="key-title"> Large </span>
+            </div>
+            <div class="fit-well-bar">
+              <div class="item_fit_precent" style="display: none;">
+                0%
+              </div>
+              <div class="bar">
+                <span class="bar-unfill"> <span class="bar-fill large-bar" style=""> </span> </span>
+              </div>
+            </div> </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="review-details" style="position: relative;">
+    <div class="row goods-reivew-item">
+      <div class="col-md-3 goods-review-pageinfo">
+        <div>
+          1–3 of 3 Reviews
+        </div>
+      </div>
+      <div class="col-md-9">
+        <div class="goods-review-size fl">
+          <span> <em style="font-style: normal;"> size </em> <i class="iconfont">  </i> </span>
+          <ul>
+            <li> All </li>
+            <li> XS </li>
+            <li> S </li>
+            <li> M </li>
+            <li> L </li>
+          </ul>
+        </div>
+        <div class="goods-review-picture fl">
+          <span> Image <i class="iconfont">  </i> </span>
+          <ul>
+            <li class="select-size"> All </li>
+            <li class=""> With Picture </li>
+            <li class=""> No Picture </li>
+          </ul>
+        </div>
+        <div class="goods-review-list">
+          <div class="list-item">
+            <div class="item-drop j-reivew-list fr">
+              <span class="she-drop-normal btn1"> Recommend <i class="iconfont">  </i> </span>
+              <ul class="she-drop-normal-ul">
+                <li class="select-size"> <a href="javascript:void(0)"> Recommend </a> </li>
+                <li> <a href="javascript:void(0)"> Most Recent to Oldest </a> </li>
+                <li> <a href="javascript:void(0)"> Oldest to Most Recent </a> </li>
+                <li> <a href="javascript:void(0)"> Likes High to Low </a> </li>
+              </ul>
+            </div>
+            <div class="item-drop fr" style="padding-right: 5px;">
+              Sort by
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!---->
+      {% if reviews %}
+      {% for review in reviews %}
+    <div class="item row">
+      <div class="user col-md-3">
+        <div class="user-msg">
+          <span class="username"> {{ review.author }} </span>
+          <span class="if-verified"> <i class="iconfont" style="font-size: 12px; font-style: normal; color: rgb(34, 34, 34); margin-right: 5px;">  </i> Verified Purchase </span>
+          <!---->
+        </div>
+      </div>
+      <div class="comment-ctn col-md-9">
+        <div class="comment-character review_para">
+          <div class="rating">
+              {% for i in 1..5 %}
+                <span class="fa fa-stack"><i class="fa fa-star fa-stack-1x {{ review.rating < i ? 'off' }}"></i></span>
+              {% endfor %}
+          </div>
+          <div class="size">
+            Item Size:
+            <div class="pos-wrap">
+              <span class="size-val"> L </span>
+            </div>
+          </div>
+          <!---->
+          <div class="publish-time">
+            <span> {{ review.date_added }} </span>
+          </div>
+          <p class="remark"> {{ review.text }}</p>
+        </div>
+        {#<div class="comment-img pic-wrap" data-swiper-index="0">#}
+          {#<img src="catalog/view/theme/default/image/product/0015151514054314644343629.jpg" style="height: 100px;margin-right: 5px;margin-bottom: 5px;cursor: pointer;position: relative;vertical-align: top;"/>#}
+          {#<img src="catalog/view/theme/default/image/product/0015151514054315989609834.jpg" style="height: 100px;margin-right: 5px;margin-bottom: 5px;cursor: pointer;position: relative;vertical-align: top;" />#}
+        {#</div>#}
+        {#<div class="reviw_issue">#}
+          {#<div class="praise-wrap">#}
+            {#<em> Was this review helpful to you? </em>#}
+            {#<i data-operation="1" class="iconfont icon-praise">  </i>#}
+            {#<label> 2 </label>#}
+          {#</div>#}
+        {#</div>#}
+        <!---->
+      </div>
+    </div>
+      {% endfor %}
+  </div>
+  <div class="row goods-review-page">
+    <div class="col-md-3">
+      <div>
+          {{ pagination }}
+      </div>
+    </div>
+  </div>
+    {% else %}
+      <p>{{ text_no_reviews }}</p>
+    {% endif %}
+</div>
+</div>
+
 
