--- a/catalog/view/theme/default/template/product/write.twig
+++ b/catalog/view/theme/default/template/product/write.twig
@@ -10,8 +10,8 @@
 <form class="form-horizontal" id="form-review">
 <div class="form-group required">
   <div class="col-sm-12">
-    <label class="control-label" for="input-name">{{ entry_name }}</label>
-    <input type="text" name="name" value="{{ customer_name }}" id="input-name" class="form-control" />
+    <label class="control-label" for="input-name">{{ entry_name }}&nbsp;:</label> &nbsp;<span style="font-size: 16px">{{ user.fullname }}</span>
+    <input type="hidden" name="name" value="{{ user.fullname }}" id="input-name" class="form-control" />
   </div>
 </div>
 <div class="form-group required">
@@ -32,7 +32,9 @@
   </div>
 </div>
 {#{{ captcha }}#}
+<a href="index.php?route=account/order" style="text-decoration: none;color: #fff;"><button type="button" data-loading-text="{{ text_loading }}" class="btn btn-success">返回</button></a>
 <button type="button" id="button-review" data-loading-text="{{ text_loading }}" class="btn btn-primary">{{ button_submit }}</button>
+
 {#{% else %}#}
 {#{{ text_login }}#}
 {#{% endif %}#}
@@ -55,7 +57,6 @@
                     }
 
                     if (json['success']) {
-                        window.history.go(-1);
                         layer.msg(json['success']);
 
                         $('input[name=\'name\'], textarea[name=\'text\']').val('');
