--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -121,10 +121,9 @@
             {#<script type="text/javascript" src="do_search.js"></script>#}
             <div class="wish-com" title="My Wishlist">
               <a class="j-wish" href="{{ wishlist }}"> <span class="iconfont"></span> </a>
-              <span class="wish-num j-wish-num"></span>
+              <span class="wish-num j-wish-num">{{ text_wishlist }}</span>
             </div>
             <div class="bag" id="logo_rightyy">
-
 
               {{ cart }}
             </div>
