--- a/catalog/view/theme/default/template/product/category.twig
+++ b/catalog/view/theme/default/template/product/category.twig
@@ -74,8 +74,8 @@
                   </div>
                 </div>
                 <div class="btm-icon-save j-gds-li-save j-gds-li-save-556827" data-id="556827" data-sku="tee180807705" data-index="2">
-                  <i class="iconfont icon-like-hollow with-arrow-bottom j-save-icon"> </i>
-                  <div class="btm-save-tip j-btm-save-tip" style="display: none;">
+                  <i class="iconfont icon-like-hollow with-arrow-bottom j-save-icon" onclick="wishlist.add('{{ product.product_id }}');"> </i>
+                  <div class="btm-save-tip j-btm-save-tip" style="display: none;" >
                     Save to Wishlist
                   </div>
                 </div>
