--- a/catalog/view/theme/default/template/product/review.twig
+++ b/catalog/view/theme/default/template/product/review.twig
@@ -21,40 +21,54 @@
         <ul class="filter-list">
           <li class="filter-item">
             <div class="filter-title-box">
-              <span class="key-title"> Small </span>
+              <span class="key-title"> five </span>
             </div>
             <div class="fit-well-bar">
-              <div class="item_fit_precent" style="display: none;">
-                0%
-              </div>
               <div class="bar">
-                <span class="bar-unfill"> <span class="bar-fill small-bar" style=""> </span> </span>
+                <span class="bar-unfill"> <span class="bar-fill five-bar" style=""> </span> </span>
               </div>
-            </div> </li>
+            </div>
+          </li>
           <li class="filter-item">
             <div class="filter-title-box">
-              <span class="key-title"> True to Size </span>
+              <span class="key-title"> four </span>
             </div>
             <div class="fit-well-bar">
-              <div class="item_fit_precent" style="display: none;">
-                100%
-              </div>
               <div class="bar">
-                <span class="bar-unfill"> <span class="bar-fill true-bar" style=""> </span> </span>
+                <span class="bar-unfill"> <span class="bar-fill four-bar" style=""> </span> </span>
               </div>
-            </div> </li>
+            </div>
+          </li>
           <li class="filter-item">
             <div class="filter-title-box">
-              <span class="key-title"> Large </span>
+              <span class="key-title"> three </span>
             </div>
             <div class="fit-well-bar">
-              <div class="item_fit_precent" style="display: none;">
-                0%
-              </div>
               <div class="bar">
-                <span class="bar-unfill"> <span class="bar-fill large-bar" style=""> </span> </span>
+                <span class="bar-unfill"> <span class="bar-fill three-bar" style=""> </span> </span>
               </div>
-            </div> </li>
+            </div>
+          </li>
+          <li class="filter-item">
+            <div class="filter-title-box">
+              <span class="key-title"> two </span>
+            </div>
+            <div class="fit-well-bar">
+              <div class="bar">
+                <span class="bar-unfill"> <span class="bar-fill two-bar" style=""> </span> </span>
+              </div>
+            </div>
+          </li>
+          <li class="filter-item">
+            <div class="filter-title-box">
+              <span class="key-title"> one </span>
+            </div>
+            <div class="fit-well-bar">
+              <div class="bar">
+                <span class="bar-unfill"> <span class="bar-fill one-bar" style=""> </span> </span>
+              </div>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
@@ -63,44 +77,44 @@
     <div class="row goods-reivew-item">
       <div class="col-md-3 goods-review-pageinfo">
         <div>
-          1–3 of 3 Reviews
+          &nbsp;
         </div>
       </div>
       <div class="col-md-9">
         <div class="goods-review-size fl">
-          <span> <em style="font-style: normal;"> size </em> <i class="iconfont">  </i> </span>
-          <ul>
-            <li> All </li>
-            <li> XS </li>
-            <li> S </li>
-            <li> M </li>
-            <li> L </li>
-          </ul>
+          {#<span> <em style="font-style: normal;"> size </em> <i class="iconfont">  </i> </span>#}
+          {#<ul>#}
+            {#<li> All </li>#}
+            {#<li> XS </li>#}
+            {#<li> S </li>#}
+            {#<li> M </li>#}
+            {#<li> L </li>#}
+          {#</ul>#}
         </div>
         <div class="goods-review-picture fl">
-          <span> Image <i class="iconfont">  </i> </span>
-          <ul>
-            <li class="select-size"> All </li>
-            <li class=""> With Picture </li>
-            <li class=""> No Picture </li>
-          </ul>
+          {#<span> Image <i class="iconfont">  </i> </span>#}
+          {#<ul>#}
+            {#<li class="select-size"> All </li>#}
+            {#<li class=""> With Picture </li>#}
+            {#<li class=""> No Picture </li>#}
+          {#</ul>#}
         </div>
-        <div class="goods-review-list">
-          <div class="list-item">
-            <div class="item-drop j-reivew-list fr">
-              <span class="she-drop-normal btn1"> Recommend <i class="iconfont">  </i> </span>
-              <ul class="she-drop-normal-ul">
-                <li class="select-size"> <a href="javascript:void(0)"> Recommend </a> </li>
-                <li> <a href="javascript:void(0)"> Most Recent to Oldest </a> </li>
-                <li> <a href="javascript:void(0)"> Oldest to Most Recent </a> </li>
-                <li> <a href="javascript:void(0)"> Likes High to Low </a> </li>
-              </ul>
-            </div>
-            <div class="item-drop fr" style="padding-right: 5px;">
-              Sort by
-            </div>
-          </div>
-        </div>
+        {#<div class="goods-review-list">#}
+          {#<div class="list-item">#}
+            {#<div class="item-drop j-reivew-list fr">#}
+              {#<span class="she-drop-normal btn1" id="main"> Recommend <i class="iconfont">  </i> </span>#}
+              {#<ul class="she-drop-normal-ul">#}
+                {#<li class="select-size show" id="Recommend" onclick="review('Recommend')">  Recommend </li>#}
+                {#<li class="show" id="Recent" onclick="review('Recent')">Most Recent to Oldest  </li>#}
+                {#<li class="show" id="Oldest" onclick="review('Oldest')">Oldest to Most Recent  </li>#}
+                {#<li class="show" id="Likes" onclick="review('Likes')"> Likes High to Low </li>#}
+              {#</ul>#}
+            {#</div>#}
+            {#<div class="item-drop fr" style="padding-right: 5px;">#}
+              {#Sort by#}
+            {#</div>#}
+          {#</div>#}
+        {#</div>#}
       </div>
     </div>
     <!---->
@@ -122,10 +136,11 @@
               {% endfor %}
           </div>
           <div class="size">
-            Item Size:
-            <div class="pos-wrap">
-              <span class="size-val"> L </span>
-            </div>
+            &nbsp;
+            {#Item Size:#}
+            {#<div class="pos-wrap">#}
+              {#<span class="size-val"> L </span>#}
+            {#</div>#}
           </div>
           <!---->
           <div class="publish-time">
@@ -157,9 +172,54 @@
     </div>
   </div>
     {% else %}
-      <p>{{ text_no_reviews }}</p>
+      <p style="text-align: center">{{ text_no_reviews }}</p>
     {% endif %}
 </div>
 </div>
+
+<script>
+  var one = {{ one }};
+  var two = {{ two }};
+  var three = {{ three }};
+  var four = {{ four }};
+  var five = {{ five }};
+  $(function () {
+      $('.five-bar').css('width',five);
+      $('.four-bar').css('width',four);
+      $('.three-bar').css('width',three);
+      $('.two-bar').css('width',two);
+      $('.one-bar').css('width',one);
+  })
+</script>
+
+{#<script>#}
+  {#function review(id) {#}
+    {#$('.show').removeClass('select-size')#}
+    {#$('#'+id).addClass('select-size');#}
+    {#var type = 0;#}
+    {#if (id == 'Recommend'){#}
+        {#$('#main').html('Recommend<i class="iconfont">  </i>');#}
+        {#type = 0;#}
+    {#}else if (id == 'Recent'){#}
+        {#$('#main').html('Most Recent to Oldest<i class="iconfont">  </i>');#}
+        {#type = 1;#}
+    {#} else if (id == 'Oldest'){#}
+        {#$('#main').html('Oldest to Most Recent<i class="iconfont">  </i>');#}
+        {#type = 2;#}
+    {#} else if (id == 'Likes'){#}
+        {#$('#main').html('Likes High to Low<i class="iconfont">  </i>');#}
+        {#type = 3;#}
+    {#}#}
+    {#$.ajax({#}
+        {#url:"index.php?route=product/product/review",#}
+        {#type:"post",#}
+        {#dataType:"json",#}
+        {#data:{'type':type},#}
+        {#success:function () {#}
+            {#console.log(1);#}
+        {#}#}
+    {#})#}
+  {#}#}
+{#</script>#}
 
 
