--- a/catalog/view/theme/default/template/product/write.twig
+++ b/catalog/view/theme/default/template/product/write.twig
@@ -2,12 +2,18 @@
 <script src="catalog/view/javascript/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="catalog/view/javascript/layer/layer.js" type="text/javascript"></script>
 <link href="catalog/view/theme/default/stylesheet/stylesheet.css" rel="stylesheet">
+<style>
+  :focus{
+    outline: 0;
+  }
+</style>
+
 <div id="product-product" class="container" style="margin-top: 10%">
     <h1 style="text-align: center">{{ text_write }}</h1>
 <div class="tab-pane" id="tab-review">
 
 {#{% if review_guest %}#}
-<form class="form-horizontal" id="form-review">
+<form class="form-horizontal" id="form-review" type="">
 <div class="form-group required">
   <div class="col-sm-12">
     <label class="control-label" for="input-name">{{ entry_name }}&nbsp;:</label> &nbsp;<span style="font-size: 16px">{{ user.fullname }}</span>
@@ -25,13 +31,25 @@
   <div class="col-sm-12">
     <label class="control-label mr-1">{{ entry_rating }}</label>
       {{ entry_bad }}
-      {% for radio in 1..5 %}
-        <input type="radio" name="rating" value="{{ loop.index }}" />
-      {% endfor %}
+      {#{% for radio in 1..5 %}#}
+        {#<input type="radio" name="rating" class="rating" value="{{ loop.index }}" />#}
+      {#{% endfor %}#}
+      <input type="radio" name="rating" class="rating" value="1" />
+      <input type="radio" name="rating" class="rating" value="2" />
+      <input type="radio" name="rating" class="rating" value="3" />
+      <input type="radio" name="rating" class="rating" value="4" />
+      <input type="radio" name="rating" class="rating" checked value="5" />
       {{ entry_good }}
   </div>
 </div>
-{#{{ captcha }}#}
+
+  {#图片#}
+    <img src="" id="img0" style="width: 20rem;height: 15rem;position: relative">
+  <input id="file" class="ufile" type="file" name="file" accept="image/gif,image/jpeg,image/jpg,image/png" style="border: 1px solid red;opacity: 0;height: 19%;width: 12.5%;position: absolute;left: 20.4%;top: 53%;">
+  <button type="button" onclick="clean()" style="position: absolute;left: 31.56%;background:rgba(0,0,0,0);border: none;">X</button>
+    <div></div>
+
+    {#{{ captcha }}#}
 <a href="index.php?route=account/order" style="text-decoration: none;color: #fff;"><button type="button" data-loading-text="{{ text_loading }}" class="btn btn-success">返回</button></a>
 <button type="button" id="button-review" data-loading-text="{{ text_loading }}" class="btn btn-primary">{{ button_submit }}</button>
 
@@ -41,14 +59,52 @@
 </form>
 </div>
 </div>
+
+<script>
+    $("#file").change(function(){
+        var objUrl = getObjectURL(this.files[0]) ;//获取文件信息
+        console.log("objUrl = "+objUrl);
+        if (objUrl) {
+            $("#img0").attr("src", objUrl);
+        }
+    }) ;
+    function getObjectURL(file) {
+        var url = '/catalog/view/theme/default/image/upload/up.png';
+        if (window.createObjectURL!=undefined) {
+            url = window.createObjectURL(file) ;
+        } else if (window.URL!=undefined) { // mozilla(firefox)
+            url = window.URL.createObjectURL(file) ;
+        } else if (window.webkitURL!=undefined) { // webkit or chrome
+            url = window.webkitURL.createObjectURL(file) ;
+        }
+        return url ;
+    }
+    function clean() {
+        $('#file').val('');
+        $("#img0").attr("src", '/catalog/view/theme/default/image/upload/up.png');
+    }
+</script>
 <script type="text/javascript">
     $(function($) {
+        $("#img0").attr("src", '/catalog/view/theme/default/image/upload/up.png');
           $('#button-review').on('click', function() {
-            $.ajax({
+              var file = document.getElementById("file").files[0];
+              var formFile = new FormData();
+              var name = $('#input-name').val();
+              var text = $('#input-review').val();
+              var rating = $("input[type='radio']:checked").val();
+              formFile.append("name", name);
+              formFile.append("text", text);
+              formFile.append("rating", rating);
+              formFile.append("file", file);
+              $.ajax({
                 url: 'index.php?route=product/product/write&product_id={{ id }}',
                 type: 'post',
                 dataType: 'json',
-                data: $("#form-review").serialize(),
+                processData :false,
+                contentType :false,
+                data:formFile,
+                // data: $("#form-review").serialize(),
                 success: function(json) {
                     $('.alert-dismissible').remove();
 
@@ -59,12 +115,13 @@
                     if (json['success']) {
                         layer.msg(json['success']);
 
-                        $('input[name=\'name\'], textarea[name=\'text\']').val('');
-                        $('input[name=\'rating\']:checked').prop('checked', false);
+                        $('textarea[name=\'text\']').val('');
+                        $('#file').val('');
+                        $("#img0").attr("src", '/catalog/view/theme/default/image/upload/up.png');
+                        // $('input[name=\'rating\']:checked').prop('checked', false);
                     }
                 }
             });
         });
     });
 </script>
-
